--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -1,3 +1,49 @@
 page-contact {
 
 }
+
+.home-image {
+  max-height: 30%;
+  max-width: 30%;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 10px;
+}
+
+.police-contact-card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+  background-image: linear-gradient( 135deg, #ABDCFF 10%, #0396FF 100%);
+}
+
+.nine-card {
+  margin-top: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+  background-image: linear-gradient( 135deg, #69FF97 10%, #00E4FF 100%);
+}
+
+.residential-card {
+  margin-top: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+  background-image: linear-gradient( 135deg, #FD6E6A 10%, #FFC600 100%);
+}
+
+.home-card {
+  text-align: center;
+}
+
+.office-text {
+  font-weight: 300;
+  font-size: 24px;
+}
+
+.contact-text {
+  font-weight: 300;
+  font-size: 18px;
+}
