--- a/src/pages/police/police.scss
+++ b/src/pages/police/police.scss
@@ -1,3 +1,109 @@
 page-police {
 
 }
+
+/* Contact one */
+hr {
+  height: 1pt;
+  border: 0;
+  color: #999;
+  background-color: #999
+}
+
+.po-one-popover {
+  font-size: 30px;
+}
+
+.po-one-cir {
+  background: #19B5FE;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  margin-top: 20px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.po-one-cir-text {
+  text-align: center;
+  font-size: 28px;
+  padding-top: 24px;
+  color: white;
+}
+
+.po-one-text {
+  text-align: center;
+  font-size: 20px;
+  padding-top: 5px;
+}
+
+.po-one-pin-icon {
+  font-size: 30px;
+  color: red;
+}
+
+.po-one-loc-text {
+  font-weight: 300;
+  font-size: 16px;
+  margin-left: 27px;
+  margin-top: -20px;
+}
+
+.po-one-phone-icon {
+  font-size: 30px;
+  color: green;
+}
+
+.po-one-num-text {
+  font-weight: 300;
+  font-size: 16px;
+  margin-left: 27px;
+  margin-top: -22px;
+}
+
+.po-one-mail-icon {
+  font-size: 30px;
+  color: blue;
+}
+
+.po-one-mail-text {
+  font-weight: 300;
+  font-size: 16px;
+  margin-left: 28px;
+  margin-top: -25px;
+}
+
+.po-one-res-text {
+  font-weight: 300;
+  font-size: 16px;
+  margin-left: 28px;
+  margin-top: -25px;
+}
+
+/* Contact two */
+.po-two-cir {
+  background: #00E640;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 20px;
+}
+
+.po-two-cir-text {
+  text-align: center;
+  font-size: 24px;
+  padding-top: 26px;
+  color: white;
+}
+
+.po-three-cir {
+  background: #BF55EC;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  margin-top: 20px;
+  margin-right: auto;
+  margin-left: auto;
+}
