new colors and other stuff

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -15,7 +15,7 @@ page-home {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px;
-  background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
+  background-image: linear-gradient( 135deg, #FFE985 10%, #FA742B 100%);
 }
 
 .contacts-card {
