--- a/src/pages/rights/eleven/eleven.scss
+++ b/src/pages/rights/eleven/eleven.scss
@@ -12,7 +12,7 @@ page-eleven {
 }
 
 .civil-card {
-  margin-top: 50px;
+  margin-top: 35%;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px;
@@ -23,5 +23,5 @@ page-eleven {
 
 .civil-text {
   font-weight: 300;
-  font-size: 18px;
+  font-size: 20px;
 }
