--- a/src/pages/rights/one/one.scss
+++ b/src/pages/rights/one/one.scss
@@ -12,16 +12,16 @@ page-one {
 }
 
 .police-card {
-  margin-top: 50px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px;
   background: #C5EFF7;
   text-align: center;
   padding: 10px 16px;
+  margin-top: 45%;
 }
 
 .police-text {
   font-weight: 300;
-  font-size: 24px;
+  font-size: 20px;
 }
