--- a/src/pages/rights/seven/seven.scss
+++ b/src/pages/rights/seven/seven.scss
@@ -12,7 +12,7 @@ page-seven {
 }
 
 .repeat-card {
-  margin-top: 50px;
+  margin-top: 35%;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px;
