--- a/src/pages/rights/three/three.scss
+++ b/src/pages/rights/three/three.scss
@@ -12,7 +12,7 @@ page-three {
 }
 
 .judge-card {
-  margin-top: 50px;
+  margin-top: 30%;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px;
@@ -23,5 +23,5 @@ page-three {
 
 .judge-text {
   font-weight: 300;
-  font-size: 18px;
+  font-size: 20px;
 }
